feat: 新增控制并发数量的配置

--- a/.env.example
+++ b/.env.example
@@ -93,6 +93,7 @@ VOICE_FORMAT="wav"         # 合成语音的格式，如无必要不建议修改
 ## 语音合成 END
 
 ## 实验性功能 BEGIN # 配置实验性功能
+COMSUMERS=3 # 设置消费者数量，默认为 3
 ENABLE_EMOTION_CLASSIFIER=true # 启用/禁用情绪分类器（警告：同时关闭RAG功能后可大幅减少冷启动时间，但表情显示可能不正常）
 ENABLE_DIRECT_EMOTION_CLASSIFIER=true # 是否在原有情绪可用时直接使用原标签
 ENABLE_TRANSLATE=false # 是否启用日语翻译功能，而不依赖于LLM的日语（需要新版人物，默认钦灵已适配）
