--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,7 @@ dependencies = [
     "mss>=10.0.0",
     "google-generativeai>=0.8.5",
     "py7zr>=1.0.0",
-    "chromadb>=1.0.0",
+#    "chromadb>=1.0.0",
     "onnxruntime>=1.17.0",
     "numpy>=1.24.0",
     "pillow>=10.0.0",
