--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ description = ""
 authors = [
     { name = "0x00-pl", email = "0x00.pl@gmail.com" },
 ]
-requires-python = ">=3.13"
+requires-python = ">=3.10"
 
 dependencies = [
     "fastapi>=0.116.1",
@@ -28,6 +28,7 @@ dependencies = [
     "onnxruntime>=1.17.0",
     "numpy>=1.24.0",
     "pillow>=10.0.0",
+    "PyYAML"
 ]
 
 # 保留给其他工具（如 poetry/pdm）的兼容配置
